# hexdump

./: .codeclimate.yml  .pep8speaks.yml  .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  README.rst  REUSE.toml  hexdump  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: fix_pkg_name.sh
.github/workflows/: bandit.yml  ci.yml  conda.yml  coverage.yml  pylint.yml  release.yml  wheels.yml
conda/: meta.yaml
src/hexdump/: __init__.py  hexdump.py
test/: test_hexdump.py
