[build-system]
requires = ["setuptools>=40.8.0",]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
#testpaths = ["src/"]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers"
markers = "subscript"

[tool.coverage.run]
branch = true
source = ["src/hexdump"]
plugins = ["coverage_python_version"]
omit = [
    "setup.py",
    ".tox",
]

[tool.coverage.paths]
source = ["src/hexdump"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]
