[metadata]
name = hexdump
version = attr: hexdump.hexdump.__version__
author = anatoly techtonik
author_email = techtonik@gmail.com
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = view/edit your binary with any text editor
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = http://github.com/sarnold/hexdump
license = AGPL-3.0
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Topic :: Software Development
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
install_requires =

include_package_data = True

packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hexdump-py = hexdump.hexdump:main

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
test =
    pylint

[check]
metadata = true
restructuredtext = true
strict = false

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist

max-line-length = 90

[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
