[metadata]
name = hexdump
version = attr: hexdump.hexdump.__version__
author = anatoly techtonik
author_email = techtonik@gmail.com
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = view/edit your binary with any text editor
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = http://github.com/sarnold/hexdump
license = AGPL-3.0
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Topic :: Software Development
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
    importlib-resources; python_version < '3.10'

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
hexdump.data =
    *.bin

[options.entry_points]
console_scripts =
    hexdump = hexdump.hexdump:main

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
test =
    pylint

[check]
metadata = true
restructuredtext = true
strict = false

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist

max-line-length = 90

[nosetests]
traverse-namespace = 1
verbosity = 3
with-coverage = 1
with-doctest = 1
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
doctest-extension = rst
exe = 1
cover-package = hexdump
cover-xml = 1
