[metadata]
name = hexdump
version = attr: setuptools_scm.get_version
description = view/edit your binary with any text editor
url = http://github.com/sarnold/hexdump
author = anatoly techtonik
author_email = techtonik@gmail.com
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_expression = LGPL-2.1-or-later
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6

setup_requires =
    setuptools_scm[toml]

install_requires =
    importlib-metadata; python_version < '3.8'
    importlib-resources; python_version < '3.10'

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
hexdump.data =
    *.bin

[options.entry_points]
console_scripts =
    hexdump = hexdump.hexdump:main

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    test

max-line-length = 90
extend-ignore = E203
